--- a/webapp/WEB-INF/classes/trans_el.properties
+++ b/webapp/WEB-INF/classes/trans_el.properties
@@ -1,13 +1,16 @@
-#Sun Nov 29 01:26:55 MST 2009
+#Thu Jul 15 22:50:01 MST 2010
 1742503604=
 1397839042=What is power search?
 1121727836=\u0392\u03B9\u03B2\u03BB\u03B9\u03BA\u03AC \u03BA\u03B5\u03AF\u03BC\u03B5\u03BD\u03B1
 80048383=\u0391\u039B\u039B\u0391 \u0395\u03A1\u0393\u0391\u039B\u0395\u0399\u0391 \u03A4\u0397\u03A3 \u0392\u0399\u0392\u039B\u039F\u03A5
+-304067748=This is a printer friendly version
 -26833613=Unbound Bible,
 1751792767=
 84883943=UPLOAD TEXTS
+1816987551=Languages\:
 -1860636657=Of course we&rsquo;re kidding. No, verses are not missing. However, some verses appear as footnotes in certain translations, because they weren&rsquo;t present in the earliest or most reliable manuscripts. To view these verses, you need to view the entire chapter or any span of verses that includes the verse directly preceding the apparent "missing" verse.
 -409898071=\u03A7\u03C9\u03C1\u03AF\u03C2 \u03C4\u03AF\u03C4\u03BB\u03BF\u03C5\u03C2 \u03C3\u03C4\u03B7 \u0392\u03AF\u03B2\u03BB\u03BF
+96646644=en_US
 1146753407=
 825576054=\u039C\u03B7 \u03C7\u03C1\u03B7\u03C3\u03B9\u03BC\u03BF\u03C0\u03BF\u03B9\u03B5\u03AF\u03C4\u03B5 Javascript
 3304=\u03A0\u03B7\u03B3\u03B1\u03AF\u03BD\u03B5\u03C4\u03B5
@@ -24,12 +27,15 @@
 -1279940531=Using Strong's Numbers, you can easily find other appearances of a word, or the location of a phrase if you know parts of the phrase but not its exact location in the Bible.
 961731111=\u03A3\u03C7\u03CC\u03BB\u03B9\u03B1
 1947754291=\ we provide power searching capabilities and cutting edge tools to help you engage the Bible at a deeper level. 
+-1995028881=Glasgow Iranian Church
 -2020445127=
 1063422380=A number of things. You can select preferred Bible translations and other texts, so that your search or study only references your preferred selections. You can also add / remove tabs at the top, depending on texts or functionality that you like or perhaps don&rsquo;t use. You can also choose the tool&rsquo;s skin. Our goal is to give you as many preferences as possible, and we&rsquo;ll be adding more in the coming months.
+3259=fa
 137584316=\u0394\u03B5\u03AF\u03C4\u03B5 \u03B1\u03C5\u03C4\u03AD\u03C2 \u03C4\u03B9\u03C2 \u03C3\u03B5\u03BB\u03AF\u03B4\u03B5\u03C2 \u03B3\u03B9\u03B1 \u03C0\u03B5\u03C1\u03B9\u03C3\u03C3\u03CC\u03C4\u03B5\u03C1\u03B5\u03C2 \u03B4\u03C9\u03C1\u03B5\u03AC\u03BD \u03C0\u03B7\u03B3\u03AD\u03C2 \u03B3\u03B9\u03B1 \u03C4\u03B7 \u0392\u03AF\u03B2\u03BB\u03BF\:
 1236046375=\u03A0\u03B1\u03C1\u03AC\u03BB\u03BB\u03B7\u03BB\u03BF
 -1747133995=
 -1955964497=What can I do with Preferences?
+76705939=K\u00F6rp\u00FC
 -433513342=What is Power Search?
 -488807382=\u03A0\u03B1\u03C1\u03AC\u03BB\u03BB\u03B7\u03BB\u03B7 \u03B5\u03BC\u03C6\u03AC\u03BD\u03B9\u03C3\u03B7\: 
 -872325569=Morphology is the information about the language parsing of a word, such as the tense, voice or mood. You can click on the morph codes following the words to view the parsing of that word
@@ -54,12 +60,14 @@
 -253594524=\u03BA\u03B1\u03C4\u03AC \u03BB\u03AD\u03BE\u03B7 \u03AE \u03C6\u03C1\u03AC\u03C3\u03B7\:
 -1205385002=\u038C\u03C1\u03BF\u03C2 \u03B1\u03BD\u03B1\u03B6\u03AE\u03C4\u03B7\u03C3\u03B7\u03C2\:
 -1903471366=What are Strong&rsquo;s Numbers?
+115861276=zh_CN
 -85337195=What is parallel study?
 -793947317=Is the Bible Tool available on CD?
 -537727964=\u03A0\u03C1\u03BF\u03B7\u03B3\u03BF\u03CD\u03BC\u03B5\u03BD\u03BF \u03BA\u03B5\u03C6\u03AC\u03BB\u03B1\u03B9\u03BF
 -1204791352=\u03A4\u03CD\u03C0\u03BF\u03C2 \u03B1\u03BD\u03B1\u03B6\u03AE\u03C4\u03B7\u03C3\u03B7\u03C2\:
 1486635489=\u0392\u03B9\u03B2\u03BB\u03B9\u03BA\u03AE \u0395\u03C4\u03B1\u03B9\u03C1\u03B5\u03AF\u03B1 CrossWire
 1733545526=\u03A7\u03C9\u03C1\u03AF\u03C2 \u03BA\u03B1\u03C1\u03C4\u03AD\u03BB\u03B1 \u03BB\u03B5\u03C0\u03C4\u03BF\u03BC\u03B5\u03C1\u03AE\u03C2 \u03B1\u03BD\u03B1\u03B6\u03AE\u03C4\u03B7\u03C3\u03B7\u03C2
+3239=Greek
 386941971=Once the text you&rsquo;re looking to study appears on the screen, you have several options. You can navigate within the text by selecting previous chapter or next chapter. Keep in mind that when you&rsquo;re at the beginning of a book of the Bible, previous chapter will take you to last chapter of the previous book. The same holds true when you select next chapter on the last chapter of a book of the Bible.
 -604339487=\u0392\u03B9\u03B2\u03BB\u03AF\u03B1 \u03B3\u03B5\u03BD\u03B9\u03BA\u03BF\u03CD \u03C0\u03B5\u03C1\u03B9\u03B5\u03C7\u03BF\u03BC\u03AD\u03BD\u03BF\u03C5
 -717182931=However, it&rsquo;s easier to just download the software from the website.
@@ -101,6 +109,8 @@
 -1121905749=The Bible Tool is part of a larger initiative co-sponsored by ABS and the SBL to allow people to approach the Bible on their terms, in the culture, community, context, media and format of their choice. This tool will evolve in the coming months / years to help us reach that goal.
 1371173378=What is &ldquo;Show Morphology&rdquo;?
 968804337=\u03A0\u03C1\u03BF\u03C7\u03C9\u03C1\u03B7\u03BC\u03AD\u03BD\u03BF - Regular Expression
+2245473=Help
+-1110669805=Daily Devotionals
 1523222879=The definition of the original word
 -1995153715=How can I get a printed edition of the Bible?
 96917886=Are you the sort of person who creates a Klingon translation of the Bible? Would it cross your mind to build a Hyper-Concordance for the New Testament in your spare time? People are using an XML standard called <acronym title\="Open Scripture Information Standard">OSIS</acronym> to do a number of interesting things.
@@ -111,6 +121,7 @@
 81929124=(\u03BF\u03C0\u03BF\u03B9\u03B1\u03B4\u03AE\u03C0\u03BF\u03C4\u03B5 \u03BC\u03BF\u03C1\u03C6\u03AE, \u03C0.\u03C7. \u039C\u03B1\u03C4-\u0399\u03C9, \u03A1\u03C9\u03BC, \u0391\u03C0\u03BF 1-5)
 -1660970327=The technology was developed by 
 772113425=
+1830861979=Library
 1137519804=
 1983726947=\u039B\u03B5\u03C0\u03C4\u03BF\u03BC\u03B5\u03C1\u03AE\u03C2 \u03B1\u03BD\u03B1\u03B6\u03AE\u03C4\u03B7\u03C3\u03B7
 285275739=\u0395\u03B4\u03AC\u03C6\u03B9\u03BF\:
@@ -121,6 +132,7 @@
 1370288619=\u0394\u03A9\u03A1\u0395\u0391\u039D \u0392\u0399\u0392\u039B\u0399\u039A\u0391 \u03A0\u03A1\u039F\u0393\u03A1\u0391\u039C\u039C\u0391\u03A4\u0391
 2026750205=What, you&rsquo;re not there yet?
 -696790656=
+96860=arm
 382223617=\u0392\u03B9\u03B2\u03BB\u03AF\u03BF \u03B1\u03BD\u03B1\u03B6\u03AE\u03C4\u03B7\u03C3\u03B7\u03C2\:
 -770109390=What is Word Study?
 -395941515=Yes, we took the verses we don&rsquo;t agree with out.
@@ -143,9 +155,9 @@
 287322318=The original Greek or Hebrew word
 1543417950=Comentaries\:
 -2063750076=[<a href\="parallelstudy.jsp?del\=all&add\=UMGreek&add\=TR&add\=NASB&add\=WHAC">\u0395\u03C1\u03B5\u03C5\u03BD\u03B7\u03C4\u03AE\u03C2 \u039A\u0394</a>]
-1156859226=\u03A0\u03C1\u03BF\u03BA\u03B1\u03B8\u03BF\u03C1\u03B9\u03C3\u03BC\u03AD\u03BD\u03B1\: [<a href\="parallelstudy.jsp?del\=all&add\=UMGreek&add\=WLC&add\=NASB&add\=LXX">\u0395\u03C1\u03B5\u03C5\u03BD\u03B7\u03C4\u03AE\u03C2 \u03A0\u0394</a>]
-27422522=\u0391\u03BA\u03C1\u03B9\u03B2\u03AE\u03C2 \u03C6\u03C1\u03AC\u03C3\u03B7
 -156575316=
+27422522=\u0391\u03BA\u03C1\u03B9\u03B2\u03AE\u03C2 \u03C6\u03C1\u03AC\u03C3\u03B7
+1156859226=\u03A0\u03C1\u03BF\u03BA\u03B1\u03B8\u03BF\u03C1\u03B9\u03C3\u03BC\u03AD\u03BD\u03B1\: [<a href\="parallelstudy.jsp?del\=all&add\=UMGreek&add\=WLC&add\=NASB&add\=LXX">\u0395\u03C1\u03B5\u03C5\u03BD\u03B7\u03C4\u03AE\u03C2 \u03A0\u0394</a>]
 1086749734=Can I modify the Bible Tool to make it better fit on my own site?
 -1650831982=
 1984518344=OSIS \u03B4\u03AF\u03BA\u03C4\u03C5\u03BF\: 
@@ -158,47 +170,53 @@
 975100616=Why are there so many versions of the Bible &ndash; are some better than others?
 934874484=\u03A0\u03C1\u03BF\u03C4\u03B9\u03BC\u03BF\u03CD\u03BC\u03B5\u03BD\u03B1 \u03C3\u03C7\u03CC\u03BB\u03B9\u03B1\:
 -1276263846=\u03A0\u03C1\u03BF\u03C4\u03B9\u03BC\u03BF\u03CD\u03BC\u03B5\u03BD\u03B1 \u03C3\u03C7\u03CC\u03BB\u03B9\u03B1 \u03BC\u03C0\u03BF\u03C1\u03BF\u03CD\u03BD \u03BD\u03B1 \u03B5\u03C0\u03B9\u03BB\u03B5\u03C7\u03B8\u03BF\u03CD\u03BD \u03B1\u03C0\u03CC \u03C4\u03B7\u03BD \u03BA\u03B1\u03C1\u03C4\u03AD\u03BB\u03B1 \u03B5\u03C0\u03B9\u03BB\u03BF\u03B3\u03CE\u03BD
--1118638381=\u03A0\u03C1\u03BF\u03C3\u03C6\u03AD\u03C1\u03BF\u03C5\u03BC\u03B5 \u03B4\u03B9\u03AC\u03C6\u03BF\u03C1\u03B1 \u03B4\u03C9\u03C1\u03B5\u03AC\u03BD \u03C0\u03C1\u03BF\u03B3\u03C1\u03AC\u03BC\u03BC\u03B1\u03C4\u03B1 \u03C4\u03B7\u03C2 \u0392\u03AF\u03B2\u03BB\u03BF\u03C5 \u03B3\u03B9\u03B1 Windows, Mac, Linux, \u03BA\u03B1\u03B9 PDAs, \u03B1\u03C0\u03CC \u03C4\u03B7\u03BD \u0392\u03B9\u03B2\u03BB\u03B9\u03BA\u03AE \u0395\u03C4\u03B1\u03B9\u03C1\u03B5\u03AF\u03B1 CrossWire. 
 -1771240401=
+-1118638381=\u03A0\u03C1\u03BF\u03C3\u03C6\u03AD\u03C1\u03BF\u03C5\u03BC\u03B5 \u03B4\u03B9\u03AC\u03C6\u03BF\u03C1\u03B1 \u03B4\u03C9\u03C1\u03B5\u03AC\u03BD \u03C0\u03C1\u03BF\u03B3\u03C1\u03AC\u03BC\u03BC\u03B1\u03C4\u03B1 \u03C4\u03B7\u03C2 \u0392\u03AF\u03B2\u03BB\u03BF\u03C5 \u03B3\u03B9\u03B1 Windows, Mac, Linux, \u03BA\u03B1\u03B9 PDAs, \u03B1\u03C0\u03CC \u03C4\u03B7\u03BD \u0392\u03B9\u03B2\u03BB\u03B9\u03BA\u03AE \u0395\u03C4\u03B1\u03B9\u03C1\u03B5\u03AF\u03B1 CrossWire. 
 1895908607=Parallel study lets you view texts side by side. You can continue view several texts at the same time, although space becomes an issue at some point depending on the texts being viewed.
 1914634662=\u039A\u03B1\u03BB\u03C9\u03C3\u03AE\u03C1\u03B8\u03B1\u03C4\u03B5 \u03C3\u03C4\u03BF \u0395\u03C1\u03B3\u03B1\u03BB\u03B5\u03AF\u03BF \u03C4\u03B7\u03C2 \u0392\u03AF\u03B2\u03BB\u03BF\u03C5 -- \u03BC\u03AF\u03B1 \u03B4\u03C9\u03C1\u03B5\u03AC\u03BD \u03B1\u03BD\u03B1\u03C0\u03C4\u03C5\u03C3\u03C3\u03CC\u03BC\u03B5\u03BD\u03B7 \u03B1\u03BD\u03BF\u03B9\u03C7\u03C4\u03AE \u03C0\u03B7\u03B3\u03AE \u03B5\u03C1\u03B3\u03B1\u03BB\u03B5\u03AF\u03C9\u03BD \u03B3\u03B9\u03B1 \u03C4\u03B7\u03BD \u03AD\u03C1\u03B5\u03C5\u03BD\u03B1 \u03C4\u03B7\u03C2 \u0392\u03AF\u03B2\u03BB\u03BF\u03C5 \u03BA\u03B1\u03B9 \u03C3\u03C7\u03B5\u03C4\u03B9\u03BA\u03CE\u03BD \u03BA\u03B5\u03B9\u03BC\u03AD\u03BD\u03C9\u03BD \u03C3\u03C4\u03BF \u03B4\u03B9\u03B1\u03B4\u03CD\u03BA\u03C4\u03B9\u03BF. \u0394\u03B7\u03BC\u03B9\u03BF\u03C5\u03C1\u03B3\u03AF\u03B1 \u03C4\u03B7\u03C2 \u0392\u03B9\u03B2\u03BB\u03B9\u03BA\u03AE\u03C2 \u0395\u03C4\u03B1\u03B9\u03C1\u03B5\u03AF\u03B1\u03C2 CrossWire, \u03C4\u03B7\u03C2 Society of Biblical Literature \u03BA\u03B1\u03B9 \u03C4\u03B7\u03C2 \u0391\u03BC\u03B5\u03C1\u03B9\u03BA\u03B1\u03BD\u03B9\u03BA\u03AE\u03C2 \u0392\u03B9\u03B2\u03BB\u03B9\u03BA\u03AE\u03C2 \u0395\u03C4\u03B1\u03B9\u03C1\u03B5\u03AF\u03B1\u03C2
-1463240824=\u039C\u03B5\u03C4\u03B1\u03C6\u03C1\u03AC\u03C3\u03B5\u03B9\u03C2\:
 -1261651212=\u038C\u03BB\u03B5\u03C2 \u03BF\u03B9 \u03BB\u03AD\u03BE\u03B5\u03B9\u03C2 \u03AE \u03BC\u03AD\u03C1\u03B7 \u03C4\u03C9\u03BD \u03BB\u03AD\u03BE\u03B5\u03C9\u03BD
--2124482255=
+1463240824=\u039C\u03B5\u03C4\u03B1\u03C6\u03C1\u03AC\u03C3\u03B5\u03B9\u03C2\:
 639648097=\u03A0\u03C1\u03BF\u03C4\u03B9\u03BC\u03BF\u03CD\u03BC\u03B5\u03BD\u03B5\u03C2 \u03BC\u03B5\u03C4\u03B1\u03C6\u03C1\u03AC\u03C3\u03B5\u03B9\u03C2
+-2124482255=
+93309679=az_IR
 -432996320=\u0395\u03C0\u03CC\u03BC\u03B5\u03BD\u03BF \u03BA\u03B5\u03C6\u03AC\u03BB\u03B1\u03B9\u03BF
 -251106573=\u03A3\u03C7\u03CC\u03BB\u03B9\u03B1
 -407365329=What is this OSIS you speak of?
--2132429552=\u0394\u03B9\u03B1\u03B8\u03AD\u03C3\u03B9\u03BC\u03B1 \u03B2\u03B9\u03B2\u03BB\u03AF\u03B1
 -1906139651=
+-2132429552=\u0394\u03B9\u03B1\u03B8\u03AD\u03C3\u03B9\u03BC\u03B1 \u03B2\u03B9\u03B2\u03BB\u03AF\u03B1
 -1215128067=
 1359135079=\u039C\u03B5\u03BB\u03AD\u03C4\u03B7 \u03BB\u03AD\u03BE\u03B7\u03C2\:
 650655508=\u03A0\u03B1\u03C4\u03AE\u03C3\u03C4\u03B5 \u03B3\u03B9\u03B1 \u03C0\u03C1\u03CC\u03C3\u03B8\u03B5\u03C3\u03B7
--1969911958=\u0394\u03B9\u03AC\u03C6\u03BF\u03C1\u03B5\u03C2 \u03B5\u03C0\u03B9\u03BB\u03BF\u03B3\u03AD\u03C2
 395882480=
+-1969911958=\u0394\u03B9\u03AC\u03C6\u03BF\u03C1\u03B5\u03C2 \u03B5\u03C0\u03B9\u03BB\u03BF\u03B3\u03AD\u03C2
 -1712078863=\u03A0\u03BF\u03BB\u03BB\u03AD\u03C2 \u03BC\u03B5\u03C4\u03B1\u03C6\u03C1\u03AC\u03C3\u03B5\u03B9\u03C2 \u03C3\u03C5\u03BC\u03C0\u03B5\u03C1\u03B9\u03BB\u03B1\u03BC\u03B2\u03AC\u03BD\u03BF\u03C5\u03BD \u03B2\u03BF\u03AE\u03B8\u03B7\u03BC\u03B1 \u03C3\u03C4\u03B9\u03C2 \u03C0\u03C1\u03C9\u03C4\u03CC\u03C4\u03C5\u03C0\u03B5\u03C2 \u03B3\u03BB\u03CE\u03C3\u03C3\u03B5\u03C2 \u03BC\u03B5 \u03AD\u03BD\u03B1 \u03B1\u03C0\u03BB\u03CC \u03C0\u03AC\u03C4\u03B7\u03BC\u03B1 \u03C0\u03AC\u03BD\u03C9 \u03C3\u03B5 \u03BF\u03C0\u03BF\u03B9\u03B1\u03B4\u03AE\u03C0\u03BF\u03C4\u03B5 \u03BB\u03AD\u03BE\u03B7 \u03C3\u03C4\u03BF \u03BA\u03B5\u03AF\u03BC\u03B5\u03BD\u03BF.
 -765286346=\u0395\u03C1\u03B3\u03B1\u03BB\u03B5\u03AF\u03B1 \u03BC\u03B5\u03BB\u03AD\u03C4\u03B7\u03C2\:
 148412459=\u0395\u03A0\u0399\u03A4\u03A1\u0395\u03A0\u039F\u039C\u0395\u039D\u0397 \u03A7\u03A1\u0397\u03A3\u0397 \u039A\u0391\u0399 \u0391\u0394\u0395\u0399\u0395\u03A3
 -2076462760=\u0397 \u03C0\u03B1\u03C1\u03AC\u03BB\u03BB\u03B7\u03BB\u03B7 \u03B5\u03BC\u03C6\u03AC\u03BD\u03B9\u03C3\u03B7 \u03C3\u03B1\u03C2 \u03B5\u03C0\u03B9\u03C4\u03C1\u03AD\u03C0\u03B5\u03B9 \u03BD\u03B1 \u03B2\u03BB\u03AD\u03C0\u03B5\u03C4\u03B5 \u03B4\u03CD\u03BF \u03AE \u03C0\u03B5\u03C1\u03B9\u03C3\u03C3\u03CC\u03C4\u03B5\u03C1\u03B1 \u03BA\u03B5\u03AF\u03BC\u03B5\u03BD\u03B1 \u03C4\u03BF \u03AD\u03BD\u03B1 \u03B4\u03AF\u03C0\u03BB\u03B1 \u03C3\u03C4\u03BF \u03AC\u03BB\u03BB\u03BF. \u0393\u03B9\u03B1 \u03C0\u03B1\u03C1\u03AC\u03B4\u03B5\u03B9\u03B3\u03BC\u03B1, \u03B8\u03B1 \u03BC\u03C0\u03BF\u03C1\u03BF\u03CD\u03C3\u03B1\u03C4\u03B5 \u03BD\u03B1 \u03B4\u03B5\u03AF\u03C4\u03B5 \u03B4\u03CD\u03BF \u03BC\u03B5\u03C4\u03B1\u03C6\u03C1\u03AC\u03C3\u03B5\u03B9\u03C2 \u03C4\u03BF\u03C5 \u03B9\u03B4\u03AF\u03BF\u03C5 \u03B5\u03B4\u03B1\u03C6\u03AF\u03BF\u03C5 \u03C4\u03B7 \u03BC\u03AF\u03B1 \u03B4\u03AF\u03C0\u03BB\u03B1 \u03C3\u03C4\u03B7\u03BD \u03AC\u03BB\u03BB\u03B7, \u03AE \u03BA\u03AC\u03C0\u03BF\u03B9\u03BF \u03B5\u03B4\u03AC\u03C6\u03B9\u03BF \u03B1\u03C0\u03CC \u03BC\u03B9\u03B1 \u03C3\u03C5\u03B3\u03BA\u03B5\u03BA\u03C1\u03B9\u03BC\u03AD\u03BD\u03B7 \u03BC\u03B5\u03C4\u03AC\u03C6\u03C1\u03B1\u03C3\u03B7 \u03BA\u03B1\u03B9 \u03BA\u03AC\u03C0\u03BF\u03B9\u03B1 \u03C3\u03C5\u03B3\u03BA\u03B5\u03BA\u03C1\u03B9\u03BC\u03AD\u03BD\u03B1 \u03C3\u03C7\u03CC\u03BB\u03B9\u03B1 \u03C3\u03C7\u03B5\u03C4\u03B9\u03BA\u03AC \u03BC\u03B5 \u03C4\u03BF \u03B5\u03B4\u03AC\u03C6\u03B9\u03BF.
-1633207700=Bible Gateway,
 -1050723907=Preferred Comentaries\:
+1633207700=Bible Gateway,
 -1690398936=\u0395\u03BC\u03C6\u03B1\u03BD\u03B9\u03B6\u03CC\u03BC\u03B5\u03BD\u03B1 \u03B2\u03B9\u03B2\u03BB\u03AF\u03B1
 -1696462307=Preferred Comentaries
 1281308638=\u03A0\u03B1\u03C1\u03BF\u03C5\u03C3\u03AF\u03B1\u03C3\u03B7 \u03C3\u03B7\u03BC\u03B5\u03B9\u03CE\u03C3\u03B5\u03C9\u03BD
+63058797=About
 2042381920=\u039A\u03B1\u03B8\u03B7\u03BC\u03B5\u03C1\u03B9\u03BD\u03AD\u03C2 \u03C3\u03BA\u03AD\u03C8\u03B5\u03B9\u03C2
 -661985422=\u0391\u03BD\u03B1\u03B6\u03AE\u03C4\u03B7\u03C3\u03B7\:
--1256493649=Are verses missing?
 1417027184=
+-1256493649=Are verses missing?
+106983531=pt_BR
 -1511568645=Who is behind the Bible Tool? Why are you wearing that wig?
 -222975755=How do I get printed copies of the Bible in different languages?
+3518=nl
+3710=tr
 1921124920=\u0391\u03C5\u03C4\u03AE \u03B7 \u03C3\u03B5\u03BB\u03AF\u03B4\u03B1 \u03B5\u03AF\u03BD\u03B1\u03B9 \u03C6\u03B9\u03BB\u03B9\u03BA\u03AE \u03C3\u03C4\u03B7\u03BD \u03B5\u03BA\u03C4\u03CD\u03C0\u03C9\u03C3\u03B7
 978829617=\u03A0\u03B1\u03C4\u03AE\u03C3\u03C4\u03B5 \u03B3\u03B9\u03B1 \u03B1\u03C6\u03B1\u03AF\u03C1\u03B5\u03C3\u03B7
 -283673852=Parchment
 -707528937=and Blue Letter Bible
 -2141571999=if you download the SWORD tool. As we add modern translations to the tool, some restrictions determined by the organizations that hold the license for the content will apply. You can copy some Biblical material from the online Bibles, as long as you follow copyright restrictions.
-449930511=\u03A7\u03A1\u0397\u03A3\u0399\u039C\u039F\u03A0\u039F\u0399\u03A9\u039D\u03A4\u0391\u03A3 \u03A4\u039F \u0395\u03A1\u0393\u0391\u039B\u0395\u0399\u039F \u03A4\u0397\u03A3 \u0392\u0399\u0392\u039B\u039F\u03A5
 1670666548=The texts can be printed in a printer-friendly way, without including all the other information on the page. You can produce a diglot by printing two Bible translations side by side. Additional translations would produce a polyglot. We hope to allow you to edit the formatting of your diglot or polyglot scripture portion in the future (hopefully early Spring).
+449930511=\u03A7\u03A1\u0397\u03A3\u0399\u039C\u039F\u03A0\u039F\u0399\u03A9\u039D\u03A4\u0391\u03A3 \u03A4\u039F \u0395\u03A1\u0393\u0391\u039B\u0395\u0399\u039F \u03A4\u0397\u03A3 \u0392\u0399\u0392\u039B\u039F\u03A5
 -1197178208=Frequently Asked Questions
+-74543520=Sandy Desert
 768239043=Strong's Numbers are numbers given to words in the Bible by Dr. James Strong for his Exhaustive Concordance, first published in 1890. With the advent of handheld computers, using Strong&rsquo;s numbers has never been easier. By looking up the corresponding number, you can obtain the following information about words in the Bible\:
 -1710858813=
 2598814=\u039A\u03B1\u03C1\u03C4\u03AD\u03BB\u03B5\u03C2
