--- a/webapp/WEB-INF/classes/trans_en_US.properties
+++ b/webapp/WEB-INF/classes/trans_en_US.properties
@@ -1,12 +1,14 @@
-#Sat Jan 16 22:23:11 MST 2010
+#Thu Jul 15 23:03:17 MST 2010
+1742503604=Bible software developed for Palm.
 1397839042=What is power search?
 1121727836=Biblical Texts
 105=i
 104=h
 80048383=OTHER BIBLE TOOLS
--304067748=This is a printer friendly version
+1751792767=Popup footnotes
 101=e
 -26833613=Unbound Bible,
+-304067748=This is a printer friendly version
 84883943=UPLOAD TEXTS
 100=d
 1816987551=Languages\:
@@ -19,43 +21,52 @@
 -629520390=Hide Parallel Tab
 -2132933458=Ignore Case (UPPER/lower isn't strictly matched)
 -1638610202=ABOUT THE BIBLE TOOL
+1397500449=Unicode 4.0 (including Plane 1) support
 -1807907639=Style\:
 -2120284785=What can I do with preferences?
 -440858376=
 -1621785194=External Links\:
+771412785=New language locales
 351120534=References to other appearances of the word in the Bible
 1995772044=Original Languages
 -1279940531=Using Strong's Numbers, you can easily find other appearances of a word, or the location of a phrase if you know parts of the phrase but not its exact location in the Bible.
 961731111=Commentaries
 1947754291=we provide power searching capabilities and cutting edge tools to help you engage the Bible at a deeper level. 
 -1995028881=Glasgow Iranian Church
+-2020445127=Download a number of free Bible software downloads for Windows, Mac, Linux and Palm produced by CrossWire Bible Society.
 1063422380=A number of things. You can select preferred Bible translations and other texts, so that your search or study only references your preferred selections. You can also add / remove tabs at the top, depending on texts or functionality that you like or perhaps don&rsquo;t use. You can also choose the tool&rsquo;s skin. Our goal is to give you as many preferences as possible, and we&rsquo;ll be adding more in the coming months.
 3259=Persian/Farsi
 137584316=Be sure to check out these other sites for free Bible resources\:  
 1236046375=Parallel
 -1955964497=What can I do with Preferences?
-76705939=K\u00F6rp\u00FC
 -433513342=What is Power Search?
+76705939=K\u00F6rp\u00FC
 -488807382=
 -872325569=Morphology is the information about the language parsing of a word, such as the tense, voice or mood. You can click on the morph codes following the words to view the parsing of that word
 177903544=An <acronym title\="Open Scripture Information Standard">OSIS</acronym> editing tool plug-in for Microsoft Word 2003 is under construction. The tool will be completed in the spring, 2004, and will let you encode texts in <acronym title\="Open Scripture Information Standard">OSIS</acronym>  for use in the tools available on this site.
+2085139382=Essays
 99473=Divehi
 1113579794=Preferred Style
 92048783=Limit Search to Range\:
 -742621714=Bible Research Center
+139206051=Bible software developed for the Windows operating environment. Features include\:
 -1900473501=Crosswalk,
 15980382=You can get CrossWire SWORD software, on which this tool was built, by getting in touch with 
+1845821898=Image Support
 97=a
 -1278213999=OSIS is a key technical piece that will allow this to happen. Other key pieces include partnerships between organizations like SBL and ABS (to insure large distribution channels), and good content, such as making modern translations and helpful related materials available. That will be a big focus in the coming months.
 1640065951=
 -637237544=Preferences
 -1946624683=Interactive Maps
 234742413=Hide FAQ Tab
+-451549348=Glossaries
 116358771=Yes. This tool was built using open source code, so feel free to use it however you like.
 920334141=All Comentaries
 -253594524=by keyword or phrase\:
 -1205385002=Search Term\:
 -1903471366=What are Strong&rsquo;s Numbers?
+115861276=Chinese (Simplified)
+-1142430264=Result Page\:
 -85337195=What is parallel study?
 -793947317=Is the Bible Tool available on CD?
 -537727964=
@@ -63,15 +74,19 @@
 1486635489=CrossWire Bible Society
 1733545526=Hide Power Search Tab
 386941971=Once the text you&rsquo;re looking to study appears on the screen, you have several options. You can navigate within the text by selecting previous chapter or next chapter. Keep in mind that when you&rsquo;re at the beginning of a book of the Bible, previous chapter will take you to last chapter of the previous book. The same holds true when you select next chapter on the last chapter of a book of the Bible.
-3239=el
+3239=Greek
 1911936993=Today's Devotion
+-604339487=Generic Books
 380329950=Hide Strongs
 -717182931=However, it&rsquo;s easier to just download the software from the website.
 879866124=Show Devotionals Tab
 1132835690=Society of Biblical Literature
 -1197467108=American Bible Society
+-752540543=BibleTime
+-441839507=Speed optimizations
 2255103=Home
 1689727392=Passage study allows you to search by keyword (for example, Pharaoh), phrase (such as Ark of the Covenant), verse (like Genesis 1\:1) or passage (John 3).
+1766474778=GnomeSword is a Bible Study application based on Gnome / Linux.
 155959361=
 538518468=The Open Scriptural Information Standard (OSIS) is an XML schema for encoding Bibles and related text. Once in OSIS, you can do lots of cool things, like publish the info as a printed book, or PDF, or HTML, or WML for viewing on a cell phone, etc. You can learn more by visiting the 
 -1033866599=
@@ -108,9 +123,13 @@
 -1110669805=Daily Devotionals
 1523222879=The definition of the original word
 -1995153715=How can I get a printed edition of the Bible?
+-2049207299=Conduct search with same search term in
 96917886=Are you the sort of person who creates a Klingon translation of the Bible? Would it cross your mind to build a Hyper-Concordance for the New Testament in your spare time? People are using an XML standard called <acronym title\="Open Scripture Information Standard">OSIS</acronym> to do a number of interesting things.
 -1506232183=OSIS website
+-1822826861=[<a href\="parallelstudy.jsp?del\=all&add\=KJV&add\=TR&add\=Treg&add\=NASB">NT Scholar</a>]
+1221567659=To view all the software available from CrossWire, go to the 
 -1818419758=Simple
+1486220906=Lexicons / Dictionaries
 81929124=(most syntax works, e.g.  mat-jn;rom;rev 1-5)
 -1660970327=The technology was developed by 
 2557855=RtoL
@@ -123,6 +142,7 @@
 -705894424=This means we will strive to enable you, the user, to have the look / feel you want, the functionality you want, the texts you want (by adding popular ones and allowing you to upload your own) in the format you want (initially electronic or print). Because the tool is open source, if you have some technical skills you are free to download the tool and make changes as you see fit.
 1645341956=BIBLE VERSIONS AND TRANSLATIONS
 1370288619=GETTING FREE BIBLE SOFTWARE
+-696790656=Bible software developed specifically for Macintosh computers running Mac OS X.
 2026750205=What, you&rsquo;re not there yet?
 96860=arm
 382223617=Module to search\:
@@ -132,21 +152,28 @@
 2136248839=Go to\:
 46=.
 911974866=Hide Home Tab
-1056208700=
+1056208700=Cults / Unorthodox / Questionable Material
 -1655125465=The SWORD Project
 -712457038=Hide Library Tab
+-140438002=MacSWORD
+1605449120=in the text of 
+1194043451=Smarter verse parsing
 -71025529=Daily Devotionals\:
+-1029354207=OSIS import and export tools
 -1072517163=GENERAL QUESTIONS
 209527724=Washed Out
+698789961=SWORD for Windows
 -724105878=This allows you to print the results of your study directly to your printer, without including the tabs on the top and tools/texts in the margins as part of your printout.
 -1145659943=Over the years a number of Bible scholars have translated the original manuscripts to help the people of a specific time or place to better understand the Word. While the language or diction may differ, the Bibles we offer agree on major points of theology. The best versions are of course those produced by the American Bible Society&hellip; oh ok, the others are excellent too, for the most part.
 637633570=What is passage study?
 287322318=The original Greek or Hebrew word
 1543417950=
 -2063750076=
-27422522=Exact Phrase
+-156575316=Section headings
 1156859226=
+27422522=Exact Phrase
 1086749734=Can I modify the Bible Tool to make it better fit on my own site?
+-1650831982=Bible+ for Palm OS
 1984518344=OSIS Web\: 
 -1632410746=Preferred Commentaries
 -1280492446=What is Passage Study?
@@ -160,17 +187,19 @@
 -1118638381=We offer a number of free Bible software downloads for Windows, Mac, Linux, and PDAs, produced by CrossWire Bible Society. 
 1895908607=Parallel study lets you view texts side by side. You can continue view several texts at the same time, although space becomes an issue at some point depending on the texts being viewed.
 1914634662=Welcome to The Bible Tool-- a free, evolving open source tool for exploring the Bible and related texts online. Created by CrossWire Bible Society, the Society of Biblical Literature and the American Bible Society as the first in a number of coming Bible engagement tools using an XML standard called 
--1261651212=All Words or Word Fragments
 1463240824=
+-1261651212=All Words or Word Fragments
 639648097=
 93309679=az_IR
 -432996320=
 -251106573=Commentaries\:
 -269383343=Hide Devotionals Tab
--407365329=What is this OSIS you speak of?
 124=|
--2132429552=
+-407365329=What is this OSIS you speak of?
+-1906139651=Parallel Bible display
 0=
+-2132429552=
+-1215128067=GnomeSword
 1359135079=
 650655508=
 -1969911958=Misc Options
@@ -178,33 +207,38 @@
 -765286346=
 148412459=APPROPRIATE USE AND PERMISSIONS
 -2076462760=
--1050723907=
 1633207700=Bible Gateway,
+-1050723907=
 -1690398936=
 -1696462307=Preferred Comentaries
 1281308638=
+2042381920=Daily Devotional
 63058797=About
 -661985422=Search\:
--1256493649=Are verses missing?
+1417027184=BibleTime is a Bible study application for Linux. It is based on the K Desktop Environment.
 119=w
+-1256493649=Are verses missing?
+106983531=Brazillian Portuguese
 116=t
 115=s
--1511568645=Who is behind the Bible Tool? Why are you wearing that wig?
 114=r
-1375204016=) of search results
+-1511568645=Who is behind the Bible Tool? Why are you wearing that wig?
 -222975755=How do I get printed copies of the Bible in different languages?
+1375204016=) of search results
+3518=Dutch
 112=p
-1921124920=This page is printer friendly
+3710=tr
 111=o
+1921124920=This page is printer friendly
 978829617=
 -283673852=Parchment
 -707528937=and Blue Letter Bible
 -2141571999=if you download the SWORD tool. As we add modern translations to the tool, some restrictions determined by the organizations that hold the license for the content will apply. You can copy some Biblical material from the online Bibles, as long as you follow copyright restrictions.
-1670666548=The texts can be printed in a printer-friendly way, without including all the other information on the page. You can produce a diglot by printing two Bible translations side by side. Additional translations would produce a polyglot. We hope to allow you to edit the formatting of your diglot or polyglot scripture portion in the future (hopefully early Spring).
 449930511=USING THE BIBLE TOOL
+1670666548=The texts can be printed in a printer-friendly way, without including all the other information on the page. You can produce a diglot by printing two Bible translations side by side. Additional translations would produce a polyglot. We hope to allow you to edit the formatting of your diglot or polyglot scripture portion in the future (hopefully early Spring).
 -1197178208=Frequently Asked Questions
--74543520=Sandy Desert
 768239043=Strong's Numbers are numbers given to words in the Bible by Dr. James Strong for his Exhaustive Concordance, first published in 1890. With the advent of handheld computers, using Strong&rsquo;s numbers has never been easier. By looking up the corresponding number, you can obtain the following information about words in the Bible\:
-1995771987=Original Language\:
+-74543520=Sandy Desert
 -1710858813=Hide All
+1995771987=Original Language\:
 2598814=Tabs
