--- a/webapp/WEB-INF/classes/trans_en_US.properties
+++ b/webapp/WEB-INF/classes/trans_en_US.properties
@@ -1,14 +1,14 @@
-#Thu Jul 15 23:03:17 MST 2010
+#Fri Jul 16 00:07:13 MST 2010
 1742503604=Bible software developed for Palm.
 1397839042=What is power search?
 1121727836=Biblical Texts
 105=i
 104=h
 80048383=OTHER BIBLE TOOLS
-1751792767=Popup footnotes
+-304067748=This is a printer friendly version
 101=e
 -26833613=Unbound Bible,
--304067748=This is a printer friendly version
+1751792767=Popup footnotes
 84883943=UPLOAD TEXTS
 100=d
 1816987551=Languages\:
@@ -21,10 +21,11 @@
 -629520390=Hide Parallel Tab
 -2132933458=Ignore Case (UPPER/lower isn't strictly matched)
 -1638610202=ABOUT THE BIBLE TOOL
-1397500449=Unicode 4.0 (including Plane 1) support
 -1807907639=Style\:
--2120284785=What can I do with preferences?
+1397500449=Unicode 4.0 (including Plane 1) support
 -440858376=
+-2120284785=What can I do with preferences?
+1991517885=United Bible Societies
 -1621785194=External Links\:
 771412785=New language locales
 351120534=References to other appearances of the word in the Bible
@@ -45,8 +46,8 @@
 -872325569=Morphology is the information about the language parsing of a word, such as the tense, voice or mood. You can click on the morph codes following the words to view the parsing of that word
 177903544=An <acronym title\="Open Scripture Information Standard">OSIS</acronym> editing tool plug-in for Microsoft Word 2003 is under construction. The tool will be completed in the spring, 2004, and will let you encode texts in <acronym title\="Open Scripture Information Standard">OSIS</acronym>  for use in the tools available on this site.
 2085139382=Essays
-99473=Divehi
 1113579794=Preferred Style
+99473=Divehi
 92048783=Limit Search to Range\:
 -742621714=Bible Research Center
 139206051=Bible software developed for the Windows operating environment. Features include\:
@@ -54,28 +55,29 @@
 15980382=You can get CrossWire SWORD software, on which this tool was built, by getting in touch with 
 1845821898=Image Support
 97=a
--1278213999=OSIS is a key technical piece that will allow this to happen. Other key pieces include partnerships between organizations like SBL and ABS (to insure large distribution channels), and good content, such as making modern translations and helpful related materials available. That will be a big focus in the coming months.
 1640065951=
--637237544=Preferences
+-1278213999=OSIS is a key technical piece that will allow this to happen. Other key pieces include partnerships between organizations like SBL and ABS (to insure large distribution channels), and good content, such as making modern translations and helpful related materials available. That will be a big focus in the coming months.
 -1946624683=Interactive Maps
+-637237544=Preferences
 234742413=Hide FAQ Tab
 -451549348=Glossaries
 116358771=Yes. This tool was built using open source code, so feel free to use it however you like.
 920334141=All Comentaries
--253594524=by keyword or phrase\:
 -1205385002=Search Term\:
+-253594524=by keyword or phrase\:
 -1903471366=What are Strong&rsquo;s Numbers?
-115861276=Chinese (Simplified)
 -1142430264=Result Page\:
+115861276=Chinese (Simplified)
 -85337195=What is parallel study?
 -793947317=Is the Bible Tool available on CD?
 -537727964=
 -1204791352=Search Type\:
-1486635489=CrossWire Bible Society
+-1659716550=Hide Morphology
 1733545526=Hide Power Search Tab
+1486635489=CrossWire Bible Society
 386941971=Once the text you&rsquo;re looking to study appears on the screen, you have several options. You can navigate within the text by selecting previous chapter or next chapter. Keep in mind that when you&rsquo;re at the beginning of a book of the Bible, previous chapter will take you to last chapter of the previous book. The same holds true when you select next chapter on the last chapter of a book of the Bible.
-3239=Greek
 1911936993=Today's Devotion
+3239=Greek
 -604339487=Generic Books
 380329950=Hide Strongs
 -717182931=However, it&rsquo;s easier to just download the software from the website.
@@ -83,8 +85,8 @@
 1132835690=Society of Biblical Literature
 -1197467108=American Bible Society
 -752540543=BibleTime
--441839507=Speed optimizations
 2255103=Home
+-441839507=Speed optimizations
 1689727392=Passage study allows you to search by keyword (for example, Pharaoh), phrase (such as Ark of the Covenant), verse (like Genesis 1\:1) or passage (John 3).
 1766474778=GnomeSword is a Bible Study application based on Gnome / Linux.
 155959361=
@@ -93,8 +95,8 @@
 82664747=Visit
 -1998487659=What is Parallel Study?
 910591475=The Bible Tool
--1642511764=View search results in
 28711354=Devotionals
+-1642511764=View search results in
 1778673885=Learn More...
 79=O
 -2128886081=
@@ -110,8 +112,8 @@
 1147145891=BIBLICAL QUESTIONS
 230718181=The SWORD Project,
 -640431634=What does &ldquo;Printer Friendly&rdquo; mean?
--195667765=DOWNLOADS
 771580917=Can I download Bible Tool Bibles and other content?
+-195667765=DOWNLOADS
 1594652557=Power search allows you to expand on the basic passage search functionality. This includes searching by sentence fragments, or exact phrase. You can also use whatever syntax you like in limiting your search range to specific sections, such as in Revelations chapters 1-5.
 849261155=Hide Notes
 -1762719186=What does &ldquo;printer friendly&rdquo; mean?
@@ -120,8 +122,8 @@
 1371173378=What is &ldquo;Show Morphology&rdquo;?
 968804337=Advanced- Regular Expression
 2245473=Help
--1110669805=Daily Devotionals
 1523222879=The definition of the original word
+-1110669805=Daily Devotionals
 -1995153715=How can I get a printed edition of the Bible?
 -2049207299=Conduct search with same search term in
 96917886=Are you the sort of person who creates a Klingon translation of the Bible? Would it cross your mind to build a Hyper-Concordance for the New Testament in your spare time? People are using an XML standard called <acronym title\="Open Scripture Information Standard">OSIS</acronym> to do a number of interesting things.
@@ -135,8 +137,8 @@
 2557855=RtoL
 1830861979=Library
 1983726947=Power Search
-285275739=Bible reference\:
 -899705719=OSIS Library
+285275739=Bible reference\:
 106426225=page 
 -420471141=The pronunciation of the original word
 -705894424=This means we will strive to enable you, the user, to have the look / feel you want, the functionality you want, the texts you want (by adding popular ones and allowing you to upload your own) in the format you want (initially electronic or print). Because the tool is open source, if you have some technical skills you are free to download the tool and make changes as you see fit.
@@ -148,9 +150,10 @@
 382223617=Module to search\:
 -770109390=What is Word Study?
 -395941515=Yes, we took the verses we don&rsquo;t agree with out.
+2435598=OSIS
 69366=FAQ
-2136248839=Go to\:
 46=.
+2136248839=Go to\:
 911974866=Hide Home Tab
 1056208700=Cults / Unorthodox / Questionable Material
 -1655125465=The SWORD Project
@@ -162,16 +165,16 @@
 -1029354207=OSIS import and export tools
 -1072517163=GENERAL QUESTIONS
 209527724=Washed Out
-698789961=SWORD for Windows
 -724105878=This allows you to print the results of your study directly to your printer, without including the tabs on the top and tools/texts in the margins as part of your printout.
+698789961=SWORD for Windows
 -1145659943=Over the years a number of Bible scholars have translated the original manuscripts to help the people of a specific time or place to better understand the Word. While the language or diction may differ, the Bibles we offer agree on major points of theology. The best versions are of course those produced by the American Bible Society&hellip; oh ok, the others are excellent too, for the most part.
 637633570=What is passage study?
 287322318=The original Greek or Hebrew word
 1543417950=
 -2063750076=
--156575316=Section headings
-1156859226=
 27422522=Exact Phrase
+1156859226=
+-156575316=Section headings
 1086749734=Can I modify the Bible Tool to make it better fit on my own site?
 -1650831982=Bible+ for Palm OS
 1984518344=OSIS Web\: 
@@ -194,8 +197,8 @@
 -432996320=
 -251106573=Commentaries\:
 -269383343=Hide Devotionals Tab
-124=|
 -407365329=What is this OSIS you speak of?
+124=|
 -1906139651=Parallel Bible display
 0=
 -2132429552=
@@ -212,24 +215,25 @@
 -1690398936=
 -1696462307=Preferred Comentaries
 1281308638=
-2042381920=Daily Devotional
 63058797=About
+2042381920=Daily Devotional
+-1678787584=Contact
 -661985422=Search\:
-1417027184=BibleTime is a Bible study application for Linux. It is based on the K Desktop Environment.
-119=w
 -1256493649=Are verses missing?
+119=w
+1417027184=BibleTime is a Bible study application for Linux. It is based on the K Desktop Environment.
 106983531=Brazillian Portuguese
 116=t
 115=s
-114=r
 -1511568645=Who is behind the Bible Tool? Why are you wearing that wig?
--222975755=How do I get printed copies of the Bible in different languages?
+114=r
 1375204016=) of search results
+-222975755=How do I get printed copies of the Bible in different languages?
 3518=Dutch
 112=p
+1921124920=This page is printer friendly
 3710=tr
 111=o
-1921124920=This page is printer friendly
 978829617=
 -283673852=Parchment
 -707528937=and Blue Letter Bible
@@ -239,6 +243,6 @@
 -1197178208=Frequently Asked Questions
 768239043=Strong's Numbers are numbers given to words in the Bible by Dr. James Strong for his Exhaustive Concordance, first published in 1890. With the advent of handheld computers, using Strong&rsquo;s numbers has never been easier. By looking up the corresponding number, you can obtain the following information about words in the Bible\:
 -74543520=Sandy Desert
--1710858813=Hide All
 1995771987=Original Language\:
+-1710858813=Hide All
 2598814=Tabs
